# TraductorDanesEspa-ol

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDITORIA_FINAL.md  BIDIRECCIONAL.md  CHANGELOG.md  CHANGELOG_v7.md  CONTRIBUTING.md  DA  DEPLOYMENT_CHECKLIST.md  Dockerfile  FILE_INDEX.md  FIX_TRUNCADO_IMPLEMENTADO.md  FIX_TRUNCATION_FINAL.md  FRONTEND_PRESERVACION_IMPLEMENTADO.md  IMPLEMENTACION_FINAL_FRONTEND.md  INICIO_RAPIDO.md  INSTRUCCIONES_INICIO.md  INSTRUCCIONES_REINICIO.md  LISTO_PARA_USAR.md  MEJORAS_PERFORMANCE.md  Makefile  OPERATIONS.md  PRESERVACION_ESTRUCTURA_IMPLEMENTADO.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  PROYECTO_COMPLETO.txt  QUICKSTART.md  README.md  REINICIAR_Y_VERIFICAR.md  RESUMEN_EJECUTIVO.md  RESUMEN_FRONTEND.md  RESUMEN_PRESERVACION.md  SECURITY.md  SOLUCION_FINAL.md  SOLUCION_SALTOS_LINEA.md  SRE_RUNBOOK.md  START_HERE.md  TREE.txt  TRUNCATION_FIX_COMPLETE.md  (+31 more)
.github/workflows/: ci.yml
app/: app.py  cache.py  email_html.py  glossary.py  inference.py  postprocess_da.py  postprocess_es.py  schemas.py  segment.py  segment_text.py  settings.py  startup.py  utils_html.py  utils_text.py
examples/: README.md  async_usage.py  basic_usage.py  curl_examples.sh
frontend/: README.md  TEST_PRESERVACION_FRONTEND.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ApiUrlInput.tsx  CopyButtons.tsx  DirectionSelect.tsx  ErrorBanner.tsx  GlossaryPanel.tsx  HtmlTranslator.tsx  MetricsBar.tsx  TextTranslator.tsx
frontend/src/hooks/: useTranslate.ts
frontend/src/pages/: Home.tsx
frontend/src/store/: useAppStore.ts
frontend/src/styles/: globals.css
scripts/: check_system.py  convert_to_ct2.sh  download_model.py  preflight.py
tests/: test_anti_truncation_comprehensive.py  test_cache.py  test_email_html.py  test_glossary.py  test_long_text_plain.py  test_no_truncation_auto.py  test_postprocess_da.py  test_postprocess_es.py  test_preserve_html_structure.py  test_preserve_newlines.py  test_translate_html.py  test_translate_smoke.py  test_truncation_fix.py
ui/: app.js  index.html  styles.css
(+2 files in other folders)
